--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "test:prod": "npm run lint && npm run test -- --coverage --no-cache",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "commit": "git-cz",
-    "semantic-release": "semantic-release",
-    "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
+    "release": "np",
     "precommit": "lint-staged"
   },
   "lint-staged": {
@@ -99,6 +98,7 @@
     "jest-enzyme": "^6.0.3",
     "lint-staged": "^7.1.3",
     "lodash.camelcase": "^4.3.0",
+    "np": "^3.0.4",
     "prettier": "^1.13.4",
     "prompt": "^1.0.0",
     "replace-in-file": "^3.0.0-beta.2",
@@ -109,7 +109,6 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-typescript2": "^0.11.1",
-    "semantic-release": "^15.0.0",
     "ts-jest": "^22.0.0",
     "ts-node": "^6.0.0",
     "tslint": "^5.8.0",
