--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.5",
     "@types/jest": "^25.1.3",
     "@types/node": "^10.7.1",
     "@types/react": "^16.9.23",
